🐛 fix : overflow 속성 때문에 일어났던 버그 fix
overflow scorll로 설정해서 사이드바를 벗어난 x 버튼이 렌더링되지 않았던 문제 해결
x버튼을 사이드바 자식요소가 아닌 동등한 관계로 만듦으로써 해결완료

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   z-index: 100;
+  background: rgba(16, 20, 26, 0.4);
 }
 
 .sidebar {
@@ -15,9 +16,11 @@
   align-items: flex-start;
   padding: 0px;
 
-  position: absolute;
+  overflow-y: auto;
+  position: fixed;
   width: 320px;
-  min-height: 150vh;
+  height: 100%;
+
   left: 0px;
   top: 0px;
   bottom: 0px;
@@ -84,9 +87,11 @@
 }
 
 #closeButton {
+  display: none;
   position: absolute;
   left: 330px;
   top: 10px;
+  z-index: 101;
 }
 
 @keyframes fadeInLeft {
@@ -142,4 +147,19 @@
   display: none;
   overflow: hidden;
   height: 0;
+}
+
+.sidebar_detail_section {
+  display: none;
+}
+
+@keyframes fadeInDetail {
+  0% {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translateZ(0);
+  }
 }
